23 April 2007
+ Can now choose to show upcoming events.
+ Removed schedule created message when using javascript popup
+ Moved getEvents function in the Schedule class
+ Increase calendar event form's popup height
+ Reformated schedule form
+ Updated files: conf/config.php,
                 templates/admin/forms/edit_schedule.tpl
                 templates/style.css,
                 templates/view/upcoming.tpl


13 April 2007
+ Bug # 1699659 - Calendar will not show 'Add Event' link if a
  schedule has not been created. Instead, the create schedule link
  will appear.

4 April 2007
+ Updated language format

12 March 2007
!! Calendar icon still needs updating.

Version 1.4.1
------------------------------------------------------------------

12 March 2007
+ Made noon the default time for new events.
+ Fixed Daylight Saving Time breaking repeats.
+ Delete event links made secure.
+ Days made linkable in month list view.
+ Added a sync dates button on the edit event form.

5 March 2007
+ Changed control panel icon

Version 1.4.0
------------------------------------------------------------------
23 February 2007
+ Fixed bug with navigation links when viewing single event.

20 February 2007
+ Uninstall clears calendar convert status.
+ Added new phrases to translation.

19 February 2007
+ Reduced translate functions
+ Removed single quotes from default integers in sql file.

2 February 2007
+ Bug #1648965. Clicking Day or Week from grid view pulls correct day
+ Changed "Today" link to view appropiate description to prevent
  confusion
+ Changed time defaults to %p to work with more installs
+ If start date is greater than end date, the event will be saved to
  the save day.
+ Bug #1648963. Fixed mini month not showing days with events.
+ Updated files: conf/config.php
+ Made event count linkable in grid view

29 January 2007
+ Labeled some permissions "unrestricted only"
+ Added permissions checks for editing and deleting